# spdlog_ex

./: .gitignore  CMakeLists.txt  README.md  spdlog_t.cpp
src/: spdlog_t.cpp
